--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,33 @@
-asgiref
-Django
-django-cors-headers
-djangorestframework
-djangorestframework-simplejwt
-PyJWT
-pytz
-sqlparse
-psycopg2-binary
-python-dotenv
+asgiref==3.11.0
+cfgv==3.5.0
+coverage==7.13.0
+distlib==0.4.0
+Django==6.0
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+factory_boy==3.3.3
+Faker==39.0.0
+filelock==3.20.0
+humanize==4.14.0
+identify==2.6.15
+iniconfig==2.3.0
+nodeenv==1.9.1
+packaging==25.0
+platformdirs==4.5.1
+pluggy==1.6.0
+pre_commit==4.5.0
+psycopg==3.3.2
+psycopg2-binary==2.9.11
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==9.0.2
+pytest-cov==7.0.0
+pytest-django==4.11.1
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+sqlparse==0.5.4
+typing_extensions==4.15.0
+tzdata==2025.3
+virtualenv==20.35.4
