--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
         "build": "tsc -b && vite build",
         "format": "prettier --write .",
         "lint": "eslint .",
-        "preview": "vite preview",
-        "prepare": "husky"
+        "preview": "vite preview"
     },
     "dependencies": {
         "axios": "^1.13.2",
@@ -28,7 +27,6 @@
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
-        "husky": "^9.1.7",
         "lint-staged": "^16.2.7",
         "prettier": "^3.7.4",
         "tailwindcss": "^4.1.18",
