--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-separator": "^1.1.8",
         "@radix-ui/react-slot": "^1.2.4",
+        "@tanstack/react-query": "^5.90.16",
         "axios": "^1.13.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
         "react-dom": "^19.2.0",
         "react-hook-form": "^7.69.0",
         "react-router-dom": "^7.11.0",
+        "recharts": "^3.6.0",
         "tailwind-merge": "^3.4.0",
         "zod": "^4.3.4"
     },
