--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework_simplejwt==5.5.1
 factory_boy==3.3.3
 Faker==39.0.0
 filelock==3.20.0
+gunicorn==22.0.0
 humanize==4.14.0
 identify==2.6.15
 iniconfig==2.3.0
