--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
     image: postgres:17
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=twacker_db
-      - POSTGRES_USER=twacker_user
-      - POSTGRES_PASSWORD=supersecretpassword
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     healthcheck:
@@ -26,13 +24,8 @@ services:
       - ./backend:/app
     ports:
       - "8000:8000"
-    environment:
-      - POSTGRES_DB=twacker_db
-      - POSTGRES_USER=twacker_user
-      - POSTGRES_PASSWORD=supersecretpassword
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-      - DJANGO_SECRET_KEY=unsafe-dev-key
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -45,8 +38,8 @@ services:
       - /app/node_modules
     ports:
       - "5173:5173"
-    environment:
-      - VITE_API_URL=http://localhost:8000/
+    env_file:
+      - .env
     depends_on:
       - backend
 
